Connection to database works

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mssqlstud.fhict.local;Database=dbi555208_footballdb;User Id=dbi555208_footballdb;Password=Football2025!Db;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
