Unit Tests/Integration Tests

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mssqlstud.fhict.local;Database=dbi555208_footballdb;User Id=dbi555208_footballdb;Password=Football2025!Db;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=mssqlstud.fhict.local;Database=dbi555208_footballdb;User Id=dbi555208_footballdb;Password=Football2025!Db;TrustServerCertificate=True;",
+    "TestConnection": "Server=CLLEVIOSERBIANO;Database=BettingApp_Test;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
   "Logging": {
